# jax_quaternion

./: README.md  pyproject.toml  unittest_functions.py
jax_quaternion/: __init__.py
src/jax_quaternion/: functions.py
tests/: unittest_functions.py
