[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jax_quaternion"
version = "0.0.1"
authors = [
  { name="Example Author", email="author@example.com" },
]
description = "test package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.12",
    "jax>=0.4.2",
]

[project.optional-dependencies]
testing = [
    "rowan",
    "absl-py",
]


[tool.setuptools.packages.find]
include = [
    "jax_quaternion*",
    "src",
]