[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jax_quaternion"
version = "0.0.0"
description = "WIP package for quaternion math with a JAX backend."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Private :: Do Not Upload",
    "Development Status :: 1 - Planning",
]
dependencies = [
    "numpy>=1.12",
    "jax>=0.4.7",
    "jaxlib",
]

[project.optional-dependencies]
testing = [
    "rowan",
    "absl-py",
]

[tool.setuptools.packages.find]
include = ["jax_quaternion*"]
